--- a/CMS_React/package.json
+++ b/CMS_React/package.json
@@ -78,10 +78,20 @@
   "dependencies": {
     "@patternfly/react-core": "^5.0.0",
     "@patternfly/react-icons": "^5.0.0",
+    "@patternfly/react-log-viewer": "^5.0.0",
     "@patternfly/react-styles": "^5.0.0",
+    "@patternfly/react-table": "^5.1.1",
     "@storybook/builder-webpack5": "^7.0.27",
+    "crypto-browserify": "^3.12.0",
+    "mammoth": "^1.6.0",
+    "path-browserify": "^1.0.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18",
+    "react-file-viewer": "^0.5.0",
     "sirv-cli": "^2.0.2"
   }
 }
