--- a/CMS_React/package.json
+++ b/CMS_React/package.json
@@ -82,6 +82,7 @@
     "@patternfly/react-styles": "^5.0.0",
     "@patternfly/react-table": "^5.1.1",
     "@storybook/builder-webpack5": "^7.0.27",
+    "axios": "^1.5.1",
     "crypto-browserify": "^3.12.0",
     "mammoth": "^1.6.0",
     "path-browserify": "^1.0.1",
